<resources>
    <string name="app_name">The Daily Thoughts</string>
    <string name="agora_app_id">4aee67b25a5d4d9fbb260ab71a3d9dc9</string>
    <string name="temporary_token">0064aee67b25a5d4d9fbb260ab71a3d9dc9IAAXr/zgi6QUhnFGG1gDVsQIRCyc6U0lFV8bxxxv9zDZjQx+f9gAAAAAEAAY899JiU/UYAEAAQCCT9Rg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="saveBtn">Forget Password</string>
    <string name="LoginBtn">Login</string>
    <string name="CreateNewAccountBtn">Login </string>
    <string name="CreateNewAccountBtn2">RegisterActivity </string>
    <string name="TrackOrder">Request </string>
    <string name="TrackOrder2">Request2 </string>
    <string name="mapAPI">AIzaSyDDhddyGE_q20suWKcsVuR790C8b3DRj3o</string>
    <string name="title_activity_location_">Map</string>
    <string name="gps_not_found_message">يتطلب هذا التطبيق GPS أو خدمة الموقع. \n\n هل ترغب في تمكين خدمة الموقع الآن؟ \n</string>
    <string name="gps_not_found_title">GPS غير ممكّن</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>


    <string name="welcome_back">Welcome Back</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="create_a_new_account">Create New Account</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="mobile_number">Phone</string>
    <string name="please_enter_email_address">Please Enter Email Address</string>
    <string name="done">Done</string>
    <string name="resend">إعادة إرسال</string>
    <string name="about">عن أو حول</string>
    <string name="pup_resutrant">pup resutrant</string>
    <string name="what_do_you_want_to_eat">ماذا تريد ان تأكل</string>
    <string name="food_menu">قائمة الطعام</string>
    <string name="add_to_cart">اضافة الى العربة</string>
    <string name="delivery_free">رسوم التوصيل</string>
    <string name="delivery_time">موعد التوصيل</string>
    <string name="additional_notes">ملاحظات اضافية</string>
    <string name="example_without_cnions">مثال بدون بصل</string>
    <string name="cart">عربة التسوق</string>
    <string name="total_price">السعر الكلي</string>
    <string name="prices_include_taxes">الأسعار تشمل الضرائب</string>
    <string name="add_more">أضف المزيد</string>
    <string name="how_to_receive_the_request">كيف تستلم الطلب</string>
    <string name="add_your_address">اضافة عنوانك</string>
    <string name="deliever_to_my_address">تسليم إلى عنواني</string>
    <string name="pick_up_from_the_restaurant">اخذه من المطعم</string>
    <string name="location">موقع</string>
    <string name="address_detail">تفاصيل العنوان</string>
    <string name="street_name_real_estate_number_floor">رقم الشارع/ رقم المنطقة/ الدو</string>
    <string name="dones">منجز</string>
    <string name="our_branches">فروعنا</string>
    <string name="choose_the_branch_you_want_to_collect_from">اختر الفرع الذي تريد الاستلام منه</string>
    <string name="verification">تحقق</string>
    <string name="search">بحث</string>
    <string name="your_request">طلبك</string>
    <string name="total">المجموع</string>
    <string name="delivery_address">عنوان التوصيل</string>
    <string name="edit">يحرر</string>
    <string name="payment_method">طريقة الدفع او السداد</string>
    <string name="cash_on_delivery">الدفع عند الاستلام</string>
    <string name="credit_card_payment">الدفع ببطاقة الائتمان</string>
    <string name="use_points">استخدم النقاط</string>
    <string name="delivery">توصيل</string>
    <string name="order_now">اطلب الان</string>
    <string name="track_order">تتبع الطلب</string>
    <string name="track_your_order_we_will_deliver_to_you_within">تتبع طلبك وسنقوم بتوصيله إليك في الداخل</string>
    <string name="thank_you">شكرا لك</string>
    <string name="_45_minutes">45 دقيقة</string>
    <string name="request_is_done">تم الطلب</string>
    <string name="requests">الطلبات</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="preparation">تحضير</string>
    <string name="order_id">رقم الطلب</string>
    <string name="your_requests">طلباتك</string>
    <string name="request">طلبك</string>
    <string name="points">نقاط</string>
    <string name="profile">ملف</string>
    <string name="total_point">مجمل النقاط</string>
    <string name="your_wallet">محفظتك</string>
    <string name="point">نقاط</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="old_password">كلمة المرور القديمة</string>
    <string name="enter_old_password">ادخل كلمة المرور القديمة</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="enter_new_password">ادخل كلمة المرور الجديدة</string>
    <string name="mobile">الجوال</string>
    <string name="save">حفظ </string>
    <string name="term_and_conditions">شروط وأحكام</string>
    <string name="settings">إعدادات</string>
    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="application_rate">تقييم التطبيق</string>
    <string name="connect_us">اتصل بنا</string>
    <string name="sign_out">خروج</string>
    <string name="cart_total">إجمالي سلة التسوق</string>
    <string name="checkout">الدفع</string>
    <string name="appwidget_text">The Daily Quote</string>
    <string name="add_widget">Add widget</string>


</resources>