<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginActivity">


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"
                android:layout_height="@dimen/_500sdp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rudios"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout"
                tools:ignore="MissingConstraints">

            </FrameLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/dailythought"
                app:layout_constraintEnd_toEndOf="@+id/frameLayout"
                app:layout_constraintStart_toStartOf="@+id/frameLayout"
                app:layout_constraintTop_toTopOf="@+id/frameLayout" />

            <TextView
                android:id="@+id/createacclabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/create_a_new_account"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@id/logo"
                tools:ignore="MissingConstraints" />


            <LinearLayout

                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical"
                android:textColorHint="#AAA9A9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createacclabel"

                tools:ignore="MissingConstraints">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1.1"
                    android:padding="10dp"
                    app:cardCornerRadius="10dp">

                    <EditText
                        android:id="@+id/usernamedit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F2F2F2"
                        android:gravity="start|center_vertical"
                        android:hint="@string/user_name"
                        android:paddingStart="45dp"
                        android:paddingLeft="@dimen/_13sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingRight="45dp"

                        android:textColor="#000"
                        android:textColorHint="#AAA9A9" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:background="#F2F2F2"
                        app:srcCompat="@drawable/ic_baseline_person_pin_24"
                        app:tint="#000"
                        tools:ignore="VectorDrawableCompat" />


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout

                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName"
                tools:ignore="MissingConstraints">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1.1"
                    android:padding="10dp"
                    app:cardCornerRadius="10dp">

                    <EditText
                        android:id="@+id/emailedit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F2F2F2"
                        android:gravity="start|center_vertical"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="45dp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingRight="45dp"
                        android:textColor="#000"
                        android:textColorHint="#AAA9A9" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:background="#F2F2F2"
                        app:srcCompat="@drawable/ic_baseline_email_24"
                        app:tint="#000"
                        tools:ignore="VectorDrawableCompat" />


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout

                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Email"
                tools:ignore="MissingConstraints">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1.1"
                    android:padding="10dp"
                    android:visibility="gone"
                    app:cardCornerRadius="10dp">

                    <EditText
                        android:id="@+id/addressedit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F2F2F2"
                        android:gravity="start|center_vertical"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:paddingStart="45dp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingRight="45dp"
                        android:textColor="#000"
                        android:textColorHint="#AAA9A9"
                        android:visibility="gone" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:background="#F2F2F2"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_baseline_location"
                        app:tint="#000"
                        tools:ignore="VectorDrawableCompat" />


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout

                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address"
                tools:ignore="MissingConstraints">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1.1"
                    android:padding="10dp"
                    android:visibility="gone"
                    app:cardCornerRadius="10dp">

                    <EditText
                        android:id="@+id/numberedit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F2F2F2"
                        android:gravity="start|center_vertical"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:paddingStart="45dp"
                        android:paddingLeft="45dp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:textColor="#000"
                        android:textColorHint="#AAA9A9" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:background="#F2F2F2"
                        app:srcCompat="@drawable/ic_baseline_phone_iphone_24"
                        app:tint="#000"
                        tools:ignore="VectorDrawableCompat" />


                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <LinearLayout

                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Phone"
                tools:ignore="MissingConstraints">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1.1"
                    android:padding="10dp"
                    app:cardCornerRadius="10dp">

                    <EditText
                        android:id="@+id/passedit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F2F2F2"
                        android:gravity="start|center_vertical"
                        android:hint="@string/password"
                        android:inputType="text"
                        android:paddingStart="45dp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingRight="45dp"
                        android:textColor="#000"
                        android:textColorHint="#AAA9A9" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_marginRight="8dp"
                        android:background="#F2F2F2"
                        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
                        app:tint="#000"
                        tools:ignore="VectorDrawableCompat" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:background="#F2F2F2"
                        app:srcCompat="@drawable/ic_baseline_lock_24"
                        app:tint="#000"
                        tools:ignore="VectorDrawableCompat" />


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/CreateNewAccountBtn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_background"
                android:text="@string/create_a_new_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/frameLayout"
                app:layout_constraintEnd_toStartOf="@id/frameLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Password" />


            <TextView
                android:id="@+id/LoginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/viewbtn2"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="@+id/frameLayout"
                app:layout_constraintStart_toStartOf="@+id/frameLayout"
                app:layout_constraintTop_toBottomOf="@+id/CreateNewAccountBtn2"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/Register_spin_kit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        app:SpinKit_Color="@color/colorPrimary" />

</RelativeLayout>